<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">P1</string>
    <string name="action_settings">Settings</string>
    <string name="universitas_pakuan">Universitas Pakuan</string>
    <string name="fakultas_matematika_dan">FAKULTAS MATEMATIKA DAN</string>
    <string name="ilmu_pengetahuan_alam">ILMU PENGETAHUAN ALAM</string>
    <string name="program_studi_ilmu_komputer">PROGRAM STUDI ILMU KOMPUTER</string>
    <string name="npm">NPM</string>
    <string name="masukan_npm">Masukan Npm</string>
    <string name="nama">Nama</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="masukan_nama">Masukan Nama</string>
    <string name="laki_laki">Laki-Laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="kelas">Kelas</string>
    <string name="agama">Agama</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="simpan">Simpan</string>
    <string name="_hasil_input_">======= Hasil Input =======</string>

</resources>